--- a/paper/Safety.tex
+++ b/paper/Safety.tex
@@ -15,6 +15,10 @@
 \AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}∷\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{[\AgdaUnderscore{}]}}\AgdaSymbol{)}\<%
 \\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Relation.Unary}\<%
+\\
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
@@ -68,73 +72,51 @@ given reduction context and therefore specified as a parameter of the data type:
 \\
 %
 \>[2]\AgdaInductiveConstructor{cut-l}%
-\>[9]\AgdaSymbol{:}%
-\>[31I]\AgdaSymbol{∀\{}\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaBound{Γ₁}\AgdaSpace{}%
-\AgdaBound{Γ₂}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{≃}}\AgdaSpace{}%
-\AgdaBound{Γ₁}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{+}}\AgdaSpace{}%
-\AgdaBound{Γ₂}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\<%
-\\
-\>[.][@{}l@{}]\<[31I]%
-\>[11]\AgdaDatatype{ReductionContext}\AgdaSpace{}%
-\AgdaBound{Δ}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₁}\AgdaSymbol{)}\AgdaSpace{}%
+\>[9]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaFunction{∀[}%
+\>[22]\AgdaSymbol{((}\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷\AgdaUnderscore{}}}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊢}}\AgdaSpace{}%
+\AgdaDatatype{ReductionContext}\AgdaSpace{}%
+\AgdaBound{Δ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{∗}}\AgdaSpace{}%
+\AgdaSymbol{((}\AgdaFunction{dual}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₂}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\<%
+\AgdaOperator{\AgdaInductiveConstructor{∷\AgdaUnderscore{}}}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊢}}\AgdaSpace{}%
+\AgdaDatatype{Proc}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇒}}\<%
 \\
 %
-\>[11]\AgdaDatatype{ReductionContext}\AgdaSpace{}%
+\>[22]\AgdaDatatype{ReductionContext}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
-\AgdaBound{Γ}\<%
+\AgdaFunction{]}\<%
 \\
 %
 \>[2]\AgdaInductiveConstructor{cut-r}%
-\>[9]\AgdaSymbol{:}%
-\>[56I]\AgdaSymbol{∀\{}\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaBound{Γ₁}\AgdaSpace{}%
-\AgdaBound{Γ₂}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{≃}}\AgdaSpace{}%
-\AgdaBound{Γ₁}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{+}}\AgdaSpace{}%
-\AgdaBound{Γ₂}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\<%
-\\
-\>[.][@{}l@{}]\<[56I]%
-\>[11]\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₁}\AgdaSymbol{)}\AgdaSpace{}%
+\>[9]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{ReductionContext}\AgdaSpace{}%
-\AgdaBound{Δ}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaFunction{∀[}%
+\>[22]\AgdaSymbol{((}\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷\AgdaUnderscore{}}}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊢}}\AgdaSpace{}%
+\AgdaDatatype{Proc}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{∗}}\AgdaSpace{}%
+\AgdaSymbol{((}\AgdaFunction{dual}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₂}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\<%
+\AgdaOperator{\AgdaInductiveConstructor{∷\AgdaUnderscore{}}}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊢}}\AgdaSpace{}%
+\AgdaDatatype{ReductionContext}\AgdaSpace{}%
+\AgdaBound{Δ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇒}}\<%
 \\
 %
-\>[11]\AgdaDatatype{ReductionContext}\AgdaSpace{}%
+\>[22]\AgdaDatatype{ReductionContext}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
-\AgdaBound{Γ}\<%
+\AgdaFunction{]}\<%
 \end{code}
 
 Substitution inside a reduction context $\ReductionContext$ is a straightforward
@@ -151,69 +133,77 @@ $\ReductionContext$:
 \AgdaBound{Δ}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
+\AgdaDatatype{Proc}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
+\AgdaDatatype{Proc}\AgdaSpace{}%
 \AgdaBound{Γ}\<%
 \\
-\>[0]\AgdaInductiveConstructor{hole}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\>[0]\AgdaInductiveConstructor{hole}%
+\>[19]\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟧}}%
-\>[19]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{P}\<%
 \\
 \>[0]\AgdaInductiveConstructor{cut-l}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{𝒞}\AgdaSpace{}%
-\AgdaBound{Q}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
-\AgdaBound{P}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟧}}%
-\>[19]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{cut}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{𝒞}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
+\AgdaBound{Q}\AgdaSymbol{)}%
+\>[19]\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaBound{P}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{cut}\AgdaSpace{}%
+\AgdaSymbol{((}\AgdaBound{𝒞}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟧}}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{Q}\<%
+\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
+\AgdaBound{Q}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaInductiveConstructor{cut-r}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{Q}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{Q}\AgdaSpace{}%
-\AgdaBound{𝒞}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
+\AgdaBound{𝒞}\AgdaSymbol{)}%
+\>[19]\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟧}}%
-\>[19]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{cut}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{Q}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{Q}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{𝒞}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟧}}\AgdaSymbol{)}\<%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSymbol{))}\<%
 \end{code}
 
 A process $P$ is well formed if every unguarded sub-process $Q$ in it is alive.
 
 \begin{code}%
-\>[0]\AgdaFunction{WellFormed}%
-\>[18]\AgdaSymbol{:}\AgdaSpace{}%
+\>[0]\AgdaFunction{WellFormed}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀\{}\AgdaBound{Γ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
+\AgdaDatatype{Proc}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaPrimitive{Set}\<%
 \\
 \>[0]\AgdaFunction{WellFormed}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{P}%
-\>[18]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{∀\{}\AgdaBound{Δ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{P}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[126I]\AgdaSymbol{∀\{}\AgdaBound{Δ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{𝒞}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ReductionContext}\AgdaSpace{}%
@@ -221,11 +211,11 @@ A process $P$ is well formed if every unguarded sub-process $Q$ in it is alive.
 \AgdaBound{Γ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{Q}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
+\AgdaDatatype{Proc}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[18][@{}l@{\AgdaIndent{0}}]%
+\>[.][@{}l@{}]\<[126I]%
 \>[19]\AgdaBound{P}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊒}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{𝒞}\AgdaSpace{}%
@@ -246,7 +236,7 @@ The proof of type safety ends up being a trivial application of
 \AgdaSymbol{∀\{}\AgdaBound{Γ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{P}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
+\AgdaDatatype{Proc}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{WellFormed}\AgdaSpace{}%
